# integration-examples

./: README.md  lerna.json
examples/django/: .gitignore  README.md  manage.py  pyproject.toml
examples/django/django-with-django-meta/: README.md  pyproject.toml
examples/django/django-with-django-meta/exampleflayyer/: settings.py  urls.py
examples/django/django-with-django-meta/polls/: views.py
examples/django/django-with-django-meta/polls/templates/polls/: base.html  detail.html  index.html
examples/django/django-without-extra-dependencies/: README.md  pyproject.toml
examples/django/django-without-extra-dependencies/exampleflayyer/: custom_context_processor.py  settings.py  urls.py
examples/django/django-without-extra-dependencies/polls/: urls.py  views.py
examples/django/django-without-extra-dependencies/polls/migrations/: 0001_initial.py
examples/django/django-without-extra-dependencies/polls/templates/polls/: base.html  results.html
examples/django/exampleflayyer/: asgi.py  settings.py  wsgi.py
examples/django/polls/: urls.py  views.py
examples/django/polls/templates/polls/: base.html
examples/docusaurus/: README.md  docusaurus.config.js  package.json
examples/express/: README.md  package.json
examples/express/routes/: index.js
examples/express/views/: index.jade  layout.jade
examples/gatsby/: .gitignore  README.md  gatsby-config.js  package.json
examples/next/: README.md  package.json
examples/next/pages/: _app.js  index.js
examples/next/styles/: globals.css
examples/rails/: .gitignore  Gemfile  README.md
(+8 files in other folders)
